--- a/iclr.bib
+++ b/iclr.bib
@@ -1177,3 +1177,166 @@ year={2018}
   year={1995},
   publisher={Elsevier}
 }
+@inproceedings{hebert2018multicalibration,
+  title={Multicalibration: Calibration for the (computationally-identifiable) masses},
+  author={H{\'e}bert-Johnson, {\'U}rsula and Kim, Michael and Reingold, Omer and Rothblum, Guy},
+  booktitle={International Conference on Machine Learning},
+  pages={1944--1953},
+  year={2018}
+}
+@inproceedings{kim2018fairness,
+  title={Fairness through computationally-bounded awareness},
+  author={Kim, Michael and Reingold, Omer and Rothblum, Guy},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={4842--4852},
+  year={2018}
+}
+@article{dawid2017individual,
+  title={On individual risk},
+  author={Dawid, Philip},
+  journal={Synthese},
+  volume={194},
+  number={9},
+  pages={3445--3474},
+  year={2017},
+  publisher={Springer}
+}
+@article{jost1994role,
+  title={The role of stereotyping in system-justification and the production of false consciousness},
+  author={Jost, John T and Banaji, Mahzarin R},
+  journal={British journal of social psychology},
+  volume={33},
+  number={1},
+  pages={1--27},
+  year={1994},
+  publisher={Wiley Online Library}
+}
+@article{kim2019preference,
+  title={Preference-Informed Fairness},
+  author={Kim, Michael P and Korolova, Aleksandra and Rothblum, Guy N and Yona, Gal},
+  journal={arXiv preprint arXiv:1904.01793},
+  year={2019}
+}
+@article{edwards2015censoring,
+  title={Censoring representations with an adversary},
+  author={Edwards, Harrison and Storkey, Amos},
+  journal={arXiv preprint arXiv:1511.05897},
+  year={2015}
+}
+@article{madras2018learning,
+  title={Learning adversarially fair and transferable representations},
+  author={Madras, David and Creager, Elliot and Pitassi, Toniann and Zemel, Richard},
+  journal={arXiv preprint arXiv:1802.06309},
+  year={2018}
+}
+@inproceedings{finn2017model,
+  title={Model-agnostic meta-learning for fast adaptation of deep networks},
+  author={Finn, Chelsea and Abbeel, Pieter and Levine, Sergey},
+  booktitle={Proceedings of the 34th International Conference on Machine Learning-Volume 70},
+  pages={1126--1135},
+  year={2017},
+  organization={JMLR. org}
+}
+@article{botvinick2019reinforcement,
+  title={Reinforcement Learning, Fast and Slow},
+  author={Botvinick, Mathew and Ritter, Sam and Wang, Jane X and Kurth-Nelson, Zeb and Blundell, Charles and Hassabis, Demis},
+  journal={Trends in cognitive sciences},
+  year={2019},
+  publisher={Elsevier}
+}
+@article{daw2014algorithmic,
+  title={The algorithmic anatomy of model-based evaluation},
+  author={Daw, Nathaniel D and Dayan, Peter},
+  journal={Philosophical Transactions of the Royal Society B: Biological Sciences},
+  volume={369},
+  number={1655},
+  pages={20130478},
+  year={2014},
+  publisher={The Royal Society}
+}
+@article{saemundsson2018meta,
+  title={Meta reinforcement learning with latent variable gaussian processes},
+  author={S{\ae}mundsson, Steind{\'o}r and Hofmann, Katja and Deisenroth, Marc Peter},
+  journal={arXiv preprint arXiv:1803.07551},
+  year={2018}
+}
+@article{zintgraf2018caml,
+  title={CAML: Fast Context Adaptation via Meta-Learning},
+  author={Zintgraf, Luisa M and Shiarlis, Kyriacos and Kurin, Vitaly and Hofmann, Katja and Whiteson, Shimon},
+  journal={arXiv preprint arXiv:1810.03642},
+  year={2018}
+}
+@inproceedings{johnson2016malmo,
+  title={The Malmo Platform for Artificial Intelligence Experimentation.},
+  author={Johnson, Matthew and Hofmann, Katja and Hutton, Tim and Bignell, David},
+  booktitle={IJCAI},
+  pages={4246--4247},
+  year={2016}
+}
+@article{kennedy2006blind,
+  title={Blind man draws using diminution in three dimensions},
+  author={Kennedy, John M and Juricevic, Igor},
+  journal={Psychonomic bulletin \& review},
+  volume={13},
+  number={3},
+  pages={506--509},
+  year={2006},
+  publisher={Springer}
+}
+@inproceedings{diuk2008object,
+  title={An object-oriented representation for efficient reinforcement learning},
+  author={Diuk, Carlos and Cohen, Andre and Littman, Michael L},
+  booktitle={Proceedings of the 25th international conference on Machine learning},
+  pages={240--247},
+  year={2008},
+  organization={ACM}
+}
+@inproceedings{kulkarni2016hierarchical,
+  title={Hierarchical deep reinforcement learning: Integrating temporal abstraction and intrinsic motivation},
+  author={Kulkarni, Tejas D and Narasimhan, Karthik and Saeedi, Ardavan and Tenenbaum, Josh},
+  booktitle={Advances in neural information processing systems},
+  pages={3675--3683},
+  year={2016}
+}
+@article{dilokthanakul2019feature,
+  title={Feature control as intrinsic motivation for hierarchical reinforcement learning},
+  author={Dilokthanakul, Nat and Kaplanis, Christos and Pawlowski, Nick and Shanahan, Murray},
+  journal={IEEE transactions on neural networks and learning systems},
+  year={2019},
+  publisher={IEEE}
+}
+@article{silver2018general,
+  title={A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play},
+  author={Silver, David and Hubert, Thomas and Schrittwieser, Julian and Antonoglou, Ioannis and Lai, Matthew and Guez, Arthur and Lanctot, Marc and Sifre, Laurent and Kumaran, Dharshan and Graepel, Thore and others},
+  journal={Science},
+  volume={362},
+  number={6419},
+  pages={1140--1144},
+  year={2018},
+  publisher={American Association for the Advancement of Science}
+}
+@inproceedings{chua2018deep,
+  title={Deep reinforcement learning in a handful of trials using probabilistic dynamics models},
+  author={Chua, Kurtland and Calandra, Roberto and McAllister, Rowan and Levine, Sergey},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={4754--4765},
+  year={2018}
+}
+@article{hafner2018learning,
+  title={Learning latent dynamics for planning from pixels},
+  author={Hafner, Danijar and Lillicrap, Timothy and Fischer, Ian and Villegas, Ruben and Ha, David and Lee, Honglak and Davidson, James},
+  journal={arXiv preprint arXiv:1811.04551},
+  year={2018}
+}
+@inproceedings{harutyunyan2018learning,
+  title={Learning with options that terminate off-policy},
+  author={Harutyunyan, Anna and Vrancx, Peter and Bacon, Pierre-Luc and Precup, Doina and Now{\'e}, Ann},
+  booktitle={Thirty-Second AAAI Conference on Artificial Intelligence},
+  year={2018}
+}
+@article{harutyunyan2019termination,
+  title={The Termination Critic},
+  author={Harutyunyan, Anna and Dabney, Will and Borsa, Diana and Heess, Nicolas and Munos, Remi and Precup, Doina},
+  journal={arXiv preprint arXiv:1902.09996},
+  year={2019}
+}
