--- a/main.tex
+++ b/main.tex
@@ -31,6 +31,12 @@ This document contains notes I took during the events I managed to make it to at
 \section{Conference Highlights}
 
 
+Personal takeaways:
+\begin{itemize}
+    \item In the wake of Rich Sutton's bitter lesson\footnote{\url{http://incompleteideas.net/IncIdeas/BitterLesson.html}} there was a lot of discussion about pure end-to-end learning vs. incorporation of structure and priors (especially at the SPiRL workshop). Lots of really excellent discussion about the use of structure in RL in particular.
+    \item Meta-RL is very popular.
+\end{itemize}
+
 % ------------
 % -- Sunday --
 % ------------
