--- a/iclr.bib
+++ b/iclr.bib
@@ -1340,3 +1340,48 @@ year={2018}
   journal={arXiv preprint arXiv:1902.09996},
   year={2019}
 }
+@article{berlyne1960conflict,
+  title={Conflict, arousal, and curiosity.},
+  author={Berlyne, Daniel E},
+  year={1960},
+  publisher={McGraw-Hill Book Company}
+}
+@article{berlyne1978curiosity,
+  title={Curiosity and learning},
+  author={Berlyne, Daniel E},
+  journal={Motivation and emotion},
+  volume={2},
+  number={2},
+  pages={97--175},
+  year={1978},
+  publisher={Springer}
+}
+@incollection{oudeyer2016intrinsic,
+  title={Intrinsic motivation, curiosity, and learning: Theory and applications in educational technologies},
+  author={Oudeyer, P-Y and Gottlieb, Jacqueline and Lopes, Manuel},
+  booktitle={Progress in brain research},
+  volume={229},
+  pages={257--284},
+  year={2016},
+  publisher={Elsevier}
+}
+@article{laversanne2018curiosity,
+  title={Curiosity driven exploration of learned disentangled goal spaces},
+  author={Laversanne-Finot, Adrien and P{\'e}r{\'e}, Alexandre and Oudeyer, Pierre-Yves},
+  journal={arXiv preprint arXiv:1807.01521},
+  year={2018}
+}
+@book{oudeyer2006self,
+  title={Self-organization in the evolution of speech},
+  author={Oudeyer, Pierre-Yves},
+  volume={6},
+  number={6},
+  year={2006},
+  publisher={OUP Oxford}
+}
+@article{hjelm2018learning,
+  title={Learning deep representations by mutual information estimation and maximization},
+  author={Hjelm, R Devon and Fedorov, Alex and Lavoie-Marchildon, Samuel and Grewal, Karan and Trischler, Adam and Bengio, Yoshua},
+  journal={arXiv preprint arXiv:1808.06670},
+  year={2018}
+}
