--- a/days/wednesday_5_8_19.tex
+++ b/days/wednesday_5_8_19.tex
@@ -194,3 +194,128 @@ $\ra$ Deep Info Max performs very well when the learned representation is used i
 Other tasks investigated: prior matching, coordinate prediction, relative coordinate prediction \\
 
 \dnote{Off to more meetings.}
+
+\subsection{Keynote: Zeynep Tufekci on Dangers if ML Works}
+
+Grew up wanting to be a physicist! But: eventually, many physicist encounter the {\it nuclear} problem: massive ethical issues facing the advancement of a scientific field. \\
+
+$\ra$ At CERN recently: giant projects! 700 people on the Higgs Boson paper. They were concerned about how to divide up the Nobel prize, meanwhile in CS we're worrying about the impact our tools have on society, security, labor, climate, social infrastructure, and beyond. So: lots of ethical issues in CS, too! \\
+
+Back in Turkey: no internet, limited access to culture/TV from the outside world (grew up watching little house in the prairie). But, got internet connection through working at IBM. \\
+
+$\ra$ Wonderful to have unimpeded access to lots of information and connections to people! Lots of optimism about the power for this tool to do good in the world \\
+
+
+{\bf This Talk:} big dangers that we're sleepwalking into. Going to end up in a scary and unhappy place, we will end up having built and contributed to part of it. \\
+\begin{itemize}
+    \item Seven years ago: the ``cat" paper, that learned to recognize cats on YouTube. Was hard to even imagine the current state of the field back in 2012.
+    \item What we need to worry about: what if it works? What are we really introducing into the world?
+\end{itemize}
+
+
+{\bf Themes:}
+\begin{enumerate}
+    \item You are part of this world, and your tools will be too.
+    \item These tools won't be used the way you think they will be.
+    \item Alternative paths are possible.
+\end{enumerate}
+
+\subsubsection{Examples Of Ways Things Can Go Wrong}
+
+Example 1: social movements in the public sphere. Specifically, the Facebook news feed:
+\begin{itemize}
+    \item Optimized to keep people engaged on the website
+    \item Recall: Ferguson, MZ, shooting of an african american teen by a police officer. Similarly: in a McDonalds, some customers were thrown into a van without any chance to say anything (by some police officers).
+    
+    $\ra$ Huge discussions about these events on Twitter, but {\it not} Facebook. 
+    
+    \item Point: Friends {\it were} talking about it, but these issues weren't ``engagement friendly" for Facebook (it was trying to populate news feed with things that would be liked/shared).
+    
+    $\ra$ At the time, the ALS ice bucket challenge was going as well. Very likeable/shareworthy, so that dominated most Facebook news feed.
+    
+    $\ra$ Chilling moment: icebucket challenge dominated the media/facebook as a result.
+\end{itemize}
+
+Difference for social movements isn't whether you hold a protest. The thing the movements manage to do to be most effective is get attention. \\
+
+$\ra$ But our algorithms are optimized to keep people engaged, so it tends to not spread certain kinds of information. A new form of censorship. \\
+
+{\bf Classic finding:} People that tend to be into one conspiracy theory tend to be into others (from social science). \\
+
+$\ra$ Instagram would recommend similar conspiracy theories, not because designers recommend them, but just because the algorithm learned this social science fact (someone likes a ``faked moon landing" post will also be presented with tons of other conspiracy theories). \\
+
+in 2016: these phenomena were {\it widespread}. Watching one certain kind of video would immediately bias future videos (if you watch a jogging video, it then leads you to hardcore marathon training, if you watch a vegetarian video, it then leads you to vegan videos). \\
+
+{\bf Point:} YouTube algorithms tends to {\it lead individuals down more polarizing and extreme routes}. Not by hand-design, but it does it {\it to increase engagement}. \\
+
+$\ra$ Hate speech, extreme views, and so on, are very ``shareworthy" and capable of improving engagement.
+
+\subsubsection{ML and its Challenges}
+
+Some core challenges of implementing ML systems in the world:
+\begin{enumerate}
+    \item Bias
+    \item Interpretability
+    \item Potency-at-scale Restructuring power
+    \item Surveillance and Privacy
+    \item Transition and Upheaval
+\end{enumerate}
+
+Example: suppose you're hiring, and suppose you use ML to hire. \\
+
+(rhetorical) Q: We have methods for predicting depression rates; what if your ML system in using this information for hiring outcomes? \\
+
+Problem: You won't even know that your system is using this information! \\
+
+Similar problem: can use a ``mirror population" system (identify similar groups) to target individuals that are fear-prone with well designed ads to encourage voting for authoritarians? (again coming from findings in social science). \\
+
+$\ra$ The way these systems are built {\it incentivizes} surveillance, since data about individuals/groups is always important. Data {\it will} get out, and will be used. \\
+
+{\bf Path Forward:} build things that can do what we want to do, but not let it control us and be used on things we dont want it to be. \\
+
+**We are in a very particular historic moment: all the companies here are trying to recruit you. If these companies that are trying to recruit you, but can't get you to do the things they want you to do, but you {\it insist} on using privacy-preserving methods. \\
+
+{\bf Takeaway:} Lots of good the talent in this room can do. \\
+
+Some thoughts:
+\begin{enumerate}
+    \item Google gave away money for ML projects. One of them was on detecting societal ideation, someone at risk, and do intervention.
+    
+    Seems like a great 
+    
+    \item What will happen: university will expel kids with mental health issues. They don't want that happening in their dorms.
+    
+    \item Look at the database of people killed by police officers. Many people are in a mental health crisis.
+    
+    $\ra$ Suicide detection program can be used in a very bad way (like laws that prevent at risk individuals from basic needs/goods).
+    
+    \item But! Imagine a privacy preserving system designed to help individuals instead.
+
+\end{enumerate}
+
+First earth day: pictures were blurry because of smog. Now that's not the case! So, a final note: genuinely consider unionizing. \\
+
+Union: you get a huge number of legal protections. You get some freedom of speech. Organize your own industry ML group. \\
+
+No one here is trying to explicitly go down this dark path. So many good people in this community! But the business model plus the world leads us to the wrong kinds of systems.
+
+Final thoughts:
+\begin{enumerate}
+    \item Organize
+    \item Build alternatives
+    \item Insist on having a voice
+\end{enumerate}
+
+*What we want, when someone wants to have a phone/app, we're just doing a bad job of what China is doing (in terms of monitoring/surveilance) for the purpose of selling more stuff. \\
+
+$\ra$ We need a real alternative. We need the conveniences and empowerment, we need an option that repsects us, that gives us early warning and intervention but not at the expensve of subjecting us to mass surveilance. \\
+
+{\bf Final Example:} Before Diffie-Helman (public key crypto), we didn't have a way of sending a message without exchanging secret keys. 
+\begin{itemize}
+    \item They thought this was a terrible problem. Needed to give people a way to communicate and exchange info without having to exchange keys beforehand.
+    
+    \item All of public key crytography comes from that. Really important and invidual-empowering tool that has dramatically reshaped the state of the world.
+    
+    \item So: stock options are cool, but we should be thinking about developing tools like this for the next generation of technology.
+\end{itemize}
+
